InFlix/force-app/main/default/objects/Recipe__c/fields/Diet__c.field-meta.xml
<CustomField>
    <fullName>Diet__c</fullName>
    <label>Diet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balanced</fullName>
                <default>true</default>
                <label>Balanced</label>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten-free</fullName>
            </value>
            <value>
                <fullName>Lactose-free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>