InFlix/force-app/main/default/objects/Recipe__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <description>Ingredients for the recipe</description>
    <label>Ingredients</label>
    <type>TextArea</type>
</CustomField>