InFlix/force-app/main/default/objects/Recipe__c/fields/Preparation__c.field-meta.xml
<CustomField>
    <fullName>Preparation__c</fullName>
    <label>Preparation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>